WS-2018.1.4 <rtorralba@localhost Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -1,5 +1,5 @@
 <templateSet group="user">
-  <template name="cl" value="console.log($END$);" toReformat="true" toShortenFQNames="true">
+  <template name="cl" value="console.log($END$);" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JS_STATEMENT" value="true" />
       <option name="TypeScript" value="true" />
